Final bugs fixed (i hope)