@@ -26,13 +26,11 @@ public class Backup {
         }
         Path source = settings.getTargetDirectory();
         Path destination = Path.of(settings.getBackupDirectory() + "/" + date);
-        if(!destination.toFile().exists()) {
+        if (!destination.toFile().exists()) {
             Files.createDirectory(destination);
-            Backup.copy(source, destination, settings.isIncludeDirectory());
-        } else {
-            Backup.copy(source, destination, settings.isIncludeDirectory());
         }
-        deleteOldestDirectories(settings.getBackupDirectory().toFile(),settings.getBackupCycleSize());
+        Backup.copy(source, destination, settings.isIncludeDirectory());
+        deleteOldestDirectories(settings.getBackupDirectory().toFile(), settings.getBackupCycleSize());
     }
 
     private static void copy(Path source, Path backupDestination, boolean isIncludeDirectory) throws IOException {
@@ -45,24 +43,23 @@ public class Backup {
                 Files.copy(file.toPath(), Paths.get(backupDestination + "/" + file.toPath().getFileName()), StandardCopyOption.REPLACE_EXISTING);
             } else if (file.isDirectory() && isIncludeDirectory) {
                 Path temp = Paths.get(backupDestination + "/" + file.toPath().getFileName());
-                if(!temp.toFile().exists()) {
+                if (!temp.toFile().exists()) {
                     Files.createDirectory(temp);
-                    copy(file.toPath(), temp, isIncludeDirectory);
-                } else {
-                    copy(file.toPath(), temp, isIncludeDirectory);
                 }
+                copy(file.toPath(), temp, isIncludeDirectory);
             }
         }
     }
 
+
+
     private static void deleteOldestDirectories(File file, int cycleSize) throws IOException {
-        List<File> toDelete = Arrays.asList(file.listFiles());
-        toDelete.stream().filter(File::isHidden).collect(Collectors.toList());
-        if (file.isDirectory() && cycleSize +1 > 4) {
-            List<File> listFiles = Arrays.stream(file.listFiles()).toList().stream()
+        List<File> toDelete = new ArrayList<>(Arrays.asList(file.listFiles()).stream().filter(f -> !f.isHidden()).toList());
+        if (file.isDirectory()) {
+            List<File> listFiles = Arrays.asList(file.listFiles()).stream()
                     .filter(File::isDirectory)
                     .sorted((f1, f2) -> Long.compare(f2.lastModified(), f1.lastModified()))
-                    .limit(3)
+                    .limit(cycleSize)
                     .toList();
             toDelete.removeAll(listFiles);
             List<Path> toDeletePath = toDelete.stream().filter(File::isDirectory).map(File::toPath).toList();
